--- a/package.json
+++ b/package.json
@@ -24,10 +24,11 @@
     "gulp": "^4.0.2",
     "jquery": "^3.3.1",
     "ngx-bootstrap": "^4.1.1",
+    "ngx-multi-level-push-menu": "^1.5.12",
     "node-sass": "^4.12.0",
     "popper.js": "^1.14.3",
     "rxjs": "~6.3.3",
-    "sweetalert": "^2.1.2",
+    "sweetalert2": "^8.14.0",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.26"
   },
